<resources>
    <string name="app_name">Memorize Quran </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customize_your_outfit">Customize your design</string>
    <string name="featured">Featured</string>
    <string name="label_next">Next</string>
    <string name="label_choose_category">Choose a category</string>
    <string name="text_loading">Please wait.Your account is being created...</string>
    <string name="long_text">In this blog, we learned how to use Coordinator Layout in our application. Coordinator Layout is used to manage the transactions and animation of various views present in an Activity. Before Coordinator Layout, Frame Layout was used, but using more than one views in Frame Layout results in overlapping of views over one another. At the end of the blog, we did some examples to have a clear understanding. Hope you enjoyed the blog.</string>
    <string name="tequila_title">Title</string>
    <string name="hint_search">Search BazarAno</string>
    <string name="tequila_name">Katherine</string>
    <string name="tequila_tagline">Student</string>
    <string name="saved_search">Saved Searches</string>
    <string name="public_cmnt_placehoder">Be the first to write a public comment.Ask a question or a freind to check it out.</string>
    <string name="text_uploading">Please wait. Your product details are being uploaded.</string>
    <string name="network_error">No network connection</string>
    <string name="remove_cart_item_msg">Are you sure you want to remove the selected items.</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>


    <string name="error_request_permission_both">This app needs camera and storage permission.</string>
    <string name="error_request_permission_camera">This app needs camera permission.</string>
    <string name="error_request_permission_storage">This app needs write storage permission.</string>


    <!--missing permission related-->
    <string name="msg_missing_read_storage_permission">Read Storage Permission Needed</string>
    <string name="msg_missing_camera_permission">Camera Permission Needed</string>
    <string name="label_no_result">No Listing Found</string>
    <string name="listing">Listing</string>
    <string name="review">Review</string>
    <string name="description">Describe what you are selling and include any details a buyer might be interested in. People love items with stories!</string>
    <string name="label_delete">Delete</string>
    <string name="label_share">Share</string>
    <string name="search_category">Search for a category</string>
    <string name="text_acc_info_update">Updating your info</string>
    <string name="checkout">Checkout</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="debit_credit">Credit/Debit Card</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="payment_method">Payment Methods</string>
    <string name="payment_method_name">Cash On Delivery</string>
    <string name="place_order">Place Order</string>
    <string name="bkash_payment">Bkash</string>
    <string name="add_address">+ Add Address</string>
    <string name="add_new_address">Add New address</string>
    <string name="empty_field_error">Do not leave fields empty</string>
    <string name="qty">Qty</string>
    <string name="cash_payment">You can pay in cash to our courier when you recieve the goods at your doorstep.</string>
    <string name="order_rcvd">Order Received</string>
    <string name="string_to_pay">To pay</string>
    <string name="string_to_review">To Review</string>
    <string name="string_cancellation">Cancellation</string>
    <string name="label_order">Orders</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_upload_request">New upload request</string>
    <string name="label_delivery">Delivery</string>
    <string name="label_crud">CRUD</string>


</resources>
