<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="viewModel"
            type="com.nkr.fashionita.ui.placeOrder.PlaceOrderViewModel"
            />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="@color/colorWhite"
            app:layout_collapseMode="pin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical">


                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="@dimen/defaultIconSizeLarge"
                    android:layout_height="@dimen/defaultIconSizeLarge"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_arrow_back_black_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"

                    />

                <TextView
                    android:id="@+id/tv_my_prof"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/spaceNormal"
                    android:paddingLeft="@dimen/spaceNormal"
                    android:paddingRight="@dimen/spaceNormal"
                    android:text="@string/payment_method_name"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/poppins_bold"
                    android:visibility="visible"
                    android:textSize="@dimen/xLargeTextSize"
                    app:layout_constraintStart_toEndOf="@+id/iv_back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.Toolbar>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="@dimen/space2dp"
            android:background="@color/colorWhite"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spaceNormal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bkash_payment"
                    android:textSize="@dimen/normalTextSize"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginBottom="@dimen/spaceNormal"
                    />



            </LinearLayout>




        </androidx.cardview.widget.CardView>




        <LinearLayout
            android:id="@+id/ll_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/spaceXSmall"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/colorOffWhite"
                android:orientation="vertical"
                android:paddingStart="@dimen/spaceNormal"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/color_text_black"
                        android:textSize="@dimen/textsize_Xmedium"
                        tools:text = "Total Price"
                        android:layout_gravity="center"
                        android:layout_weight="1"

                        />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/color_text_black"
                        android:textSize="@dimen/textsize_Xmedium"
                        tools:text = "4000"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:drawableLeft="@drawable/ic_taka_cyan"
                        android:layout_weight="2"
                        />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_place_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/space2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_login"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/place_order"
                android:textColor="@color/colorWhite" />


        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>